--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
                 os: [ubuntu-latest, windows-latest]
                 php: [8.2]
                 laravel: [10.*]
-                stability: [prefer-prefer-stable]
+                stability: [prefer-stable]
                 include:
                     - laravel: 10.*
                       testbench: ^9.11
@@ -39,7 +39,7 @@ jobs:
                   echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
             - name: Install dependencies
               run: |
-                  composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-                  composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+                  composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --dev
+                  composer update --${{ matrix.stability }} --prefer-dist --no-interaction --dev
             - name: Execute tests
               run: vendor/bin/pest
