--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest]
                 php: [8.2]
-                laravel: [10.*]
+                laravel: [10.20.0]
                 stability: [prefer-stable]
                 include:
-                    - laravel: 10.*
+                    - laravel: 10.20.0
                       testbench: 9.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
