--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,19 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest]
                 php: [8.2]
-                laravel: [10.20.0]
+                laravel: [10.*, 11.*]
                 stability: [prefer-stable]
                 include:
-                    - laravel: 10.20.0
+                    - laravel: 10.*
+                      testbench: 8.*
+                    - laravel: 11.*
                       testbench: 9.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
 
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
@@ -39,7 +41,7 @@ jobs:
                   echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
             - name: Install dependencies
               run: |
-                  composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --dev
-                  composer update --${{ matrix.stability }} --prefer-dist --no-interaction --dev
+                  composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+                  composer update --${{ matrix.stability }} --prefer-dist --no-interaction
             - name: Execute tests
-              run: vendor/bin/pest
+              run: vendor/bin/pest --ci
