--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
                 stability: [prefer-stable]
                 include:
                     - laravel: 10.20.0
-                      testbench: 8.31
+                      testbench: ^8.31
                     - laravel: 11.*
                       testbench: 9.*
 
