--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                os: [ubuntu-latest, windows-latest]
+                os: [ubuntu-latest]
                 php: [8.2, 8.3]
                 laravel: [10.*, 11.*]
                 stability: [prefer-stable]
                 include:
-                    - laravel: 10.20.0
+                    - laravel: 10.*
                       testbench: ^8.31
                     - laravel: 11.*
                       testbench: 9.*
