--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "orchestra/testbench": "^9.11",
         "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "phpunit/phpunit": "^11.0",
+        "phpunit/phpunit": "^10.0|^11.0",
         "spatie/laravel-ray": "^1.37"
     },
     "autoload": {
