--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.59",
         "laravel/pint": "^1.16",
-        "orchestra/testbench": "^9.11",
+        "orchestra/testbench": "^v8.14|^9.11",
         "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
         "phpunit/phpunit": "^10.0|^11.0",
