--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "illuminate/http": ">=10.0",
-        "illuminate/support": ">=10.0"
+        "php": "^8.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.59",
